// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductImage/> Debe de mostrar el componente con la imagen del producto 2 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en <ProductImage/> debe de mostrar el componente inicialmente del producto 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="https://test.jpg"
/>
`;
